#9 [REFACTOR] 리뷰 생성 메서드 자바 스트림 적용